Custom Component/src/objects/Reference__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreviousValue__c</fullName>
        <label>Previous Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>HiR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>oca__c</fullName>
        <defaultValue>0</defaultValue>
        <label>oca</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ref_cancelreasoncode</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>oca__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Reference__c.ref_cancelreasoncode</value>
        </filters>
        <label>ref_cancelreasoncode</label>
    </listViews>
    <nameField>
        <label>Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference</pluralLabel>
    <recordTypes>
        <fullName>fss_seatreservationstatuscode</fullName>
        <active>true</active>
        <label>fss_seatreservationstatuscode</label>
    </recordTypes>
    <recordTypes>
        <fullName>ntm_gradescoredefinition</fullName>
        <active>true</active>
        <label>ntm_gradescoredefinition</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_academicstandingtype</fullName>
        <active>true</active>
        <label>ref_academicstandingtype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_cancelreasoncode</fullName>
        <active>true</active>
        <label>ref_cancelreasoncode</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_certificatecategorytype</fullName>
        <active>true</active>
        <label>ref_certificatecategorytype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_citizenshiptype</fullName>
        <active>true</active>
        <label>ref_citizenshiptype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_classstatuscode</fullName>
        <active>true</active>
        <label>ref_classstatuscode</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_credithourtype</fullName>
        <active>true</active>
        <label>ref_credithourtype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_credittype</fullName>
        <active>true</active>
        <label>ref_credittype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_disabilitytype</fullName>
        <active>true</active>
        <label>ref_disabilitytype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_discountamounttype</fullName>
        <active>true</active>
        <label>ref_discountamounttype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_discounttype</fullName>
        <active>true</active>
        <label>ref_discounttype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_ethnicitytype</fullName>
        <active>true</active>
        <label>ref_ethnicitytype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_gradescaletype</fullName>
        <active>true</active>
        <label>ref_gradescaletype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_institutionstatuscode</fullName>
        <active>true</active>
        <label>ref_institutionstatuscode</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_instructortype</fullName>
        <active>true</active>
        <label>ref_instructortype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_itemtype</fullName>
        <active>true</active>
        <label>ref_itemtype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_organizationroletype</fullName>
        <active>true</active>
        <label>ref_organizationroletype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_organizationtype</fullName>
        <active>true</active>
        <label>ref_organizationtype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_parttimefulltimestatuscode</fullName>
        <active>true</active>
        <label>ref_parttimefulltimestatuscode</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_religiontype</fullName>
        <active>true</active>
        <label>ref_religiontype</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_schoolcode</fullName>
        <active>true</active>
        <label>ref_schoolcode</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_studentstatuscode</fullName>
        <active>true</active>
        <label>ref_studentstatuscode</label>
    </recordTypes>
    <recordTypes>
        <fullName>ref_termtype</fullName>
        <active>true</active>
        <label>ref_termtype</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>